syntax = "proto3";

option go_package = "github.com/v1shn3vsk7/PlaylistAPI/internal/server/grpc/proto/server.proto";

package grpc;

import "google/protobuf/empty.proto";

message AddRequest {
  string name     = 1;
  string artist   = 2;
  int32  duration = 3;
}

message EditRequest {
  string prev_name    = 1;
  string prev_artist  = 2;
  string new_name     = 3;
  string new_artist   = 4;
  int32  new_duration = 5;
}

message DeleteRequest {
  string name   = 1;
  string artist = 2;
}

message Response {
  string result = 1;
}

service Player {
  rpc Play(google.protobuf.Empty)    returns(Response)  {}
  rpc Pause(google.protobuf.Empty)   returns(Response)  {}
  rpc Next(google.protobuf.Empty)    returns(Response)  {}
  rpc Prev(google.protobuf.Empty)    returns(Response)  {}
  rpc Add(AddRequest)                returns(Response)  {}
  rpc Edit(EditRequest)              returns(Response)  {}
  rpc Delete(DeleteRequest)          returns(Response)  {}
  rpc Status(google.protobuf.Empty)  returns(Response)  {}
}



